# nba-bot

./: .gitignore  bot.py  corrections.db  pinch_hit_bot.py  qk_bot.py  requirements.txt
services/pinch-hit/: .env.example  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
services/pinch-hit/migrations/: 001_initial.sql  002_event_type_check.sql  003_sync_event_type_check.sql  004_seen_tweets_index.sql
services/pinch-hit/pinch_hit/: logging_config.py  main.py  types.py
services/pinch-hit/pinch_hit/alerts/: __init__.py  discord.py  odds.py  ops.py  types.py
services/pinch-hit/pinch_hit/config/: __init__.py  reporters.py
services/pinch-hit/pinch_hit/consumers/: gumbo.py  twitter.py
services/pinch-hit/pinch_hit/eval/: logger.py
services/pinch-hit/pinch_hit/parsing/: __init__.py  gumbo_event.py  llm.py  names.py  tweet.py
services/pinch-hit/pinch_hit/state/: __init__.py  background.py  db.py  repository.py  runtime.py  types.py
services/pinch-hit/pinch_hit/workers/: health.py  timeout.py
